--- a/src/rocket.css
+++ b/src/rocket.css
@@ -27,6 +27,10 @@ div.rating
 
 div.landingpad
 {
+	text-align: center;
+	font-size: 24px;
+	color: blue;
+
 	position: absolute;
 	top: 0px;
 	left: 0px;
