--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,12 @@ html, body
 {
 	overflow: visible;
 	color: rgb(0%,0%,0%);  /* black #000 */
-	background-color: rgb(100%,100%,100%);  /* white #fff */
+	background-color: rgb(0%,0%,0%);  /* black #000 */
 	font-family: arial, verdana, helvetica, sans-serif;
 	font-size: 100%;
 
-	margin-left:  2px;
-	margin-right: 2px;
-	margin-top: 2px;
-	margin-bottom: 2px;
+	margin: 0px 0px 0px 0px;
 	box-sizing: border-box;
-	width: calc(100% - 4px);
 }
 
 /* ************** <h1> through <h6> **************** */
@@ -88,84 +84,6 @@ a:active
 	color: rgb(100%,6.7%,40%); /* #f16 */
 }
 
-/* ************************ Navbar ********************** */
-
-div.navbar a:visited
-{
-	color: rgb(0%,0%,100%); /* blue #00f */
-}
-
-/* change background image in navbar on hover */
-/* also put box around it */
-
-div.navbar a:hover
-{
-	color: rgb(0%,67%,0%);	/* rgb(0,170,0) or #0a0 */
-	background-image: url(./images/ybtile.gif);
-	padding-top: 5px;
-	padding-bottom: 6px;
-	padding-left: 6px;
-	padding-right: 6px;
-	border: 1px;
-	border-style: solid;
-	position: relative;
-	left: -7px;
-	margin-right: -14px;
-}
-
-/* Navigation Bar */
-
-div.navbar
-{
-	background-image: url("./images/ybtile.gif");
-
-	/* sticky positioning: stick to top of viewport */
-
-	position: sticky;
-	z-index: 1000;
-	top: 0;
-	bottom: auto;
-	right: auto;
-	left: auto;
-
-	white-space: nowrap;
-	border-width: 1px 2px;	/* top, bottom = 1 px, sides = 2 px */
-	border-color: rgb(65%,16%,16%); /* #a52a2a or rgb(165,42,42) */
-	border-style: solid;
-
-	padding-bottom: 4px;
-	padding-top:    3px;
-
-	margin-top:    6px;
-	margin-bottom: 8px;
-
-	font-size:   100%;
-	font-weight: bold;
-
-	box-sizing: border-box;
-	overflow: visible;
-/*	min-width: 20em; */
-	min-width: 57em;
-	width: 100%;
-}
-
-ul.navbar, li.navbar
-{
-	display: inline;
-	list-style-type: none;
-	overflow: hidden;
-	white-space: nowrap;
-	padding: 0px;
-	margin: 0px;
-	border: 0px;
-}
-
-li.navbar
-{
-	padding-left:  3%;
-	padding-right: 3%;
-}
-
 /* ***************** Horizontal Rule ******************** */
 
 hr	/* Don't use <hr>. Use <div class="hr"></div>  instead */
@@ -192,191 +110,7 @@ div.hr
 
 /* ************************* Div styles ********************** */
 
-div.buy
-{
-	display: flex;
-	flex: 1;
-	flex-flow: row nowrap;
-	justify-content: left;
-	overflow: visible;
-	white-space: nowrap;
-	margin: 10px;
-}
-
-div.price
-{
-	font-size: 25px;
-	font-weight: bold;
-	margin-left: 5em;
-	margin-right: 0.5em;
-	margin-top: 8px;
-}
-
-div.buybutton
-{
-	margin: 7px;
-}
-
-a.buybutton
-{
-	font-size: 25px;
-	font-weight: bold;
-	width: 55px;
-	height: 28px;
-	margin: 7px;
-	color: red;
-	background-color: white;
-	margin-color: red;
-	border-style: solid;
-	border-width: 2px;
-	border-radius: 4px;
-	padding: 5px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-a.buybutton:hover
-{
-	color: white;
-	background-color: red;
-	border-color: red;
-}
-
-/* section headings */
-
-div.stripheader
-{
-	color: black;
-	background-image: url(./images/ybtile.gif);
-
-	border-width: 1px 2px;
-	border-color: rgb(65%,16%,16%); /* #a52a2a or rgb(165,42,42) */
-	border-style: solid;
-
-	padding-bottom: 4px;
-	padding-top:    3px;
-	padding-left: 2em;
-
-	margin-top:    6px;
-	margin-bottom: 8px;
-
-	font-size:   100%;
-	font-weight: bold;
-
-	box-sizing: border-box;
-	overflow: visible;
-/*	min-width: 20em; */
-	min-width: 57em;
-	width: 100%;
-}
-
-/* Contact Form */
-
-div.contactform
-{
-	width: 37em;
-/*	margin-left: calc( ( (100% / 2) - (37em / 2) ) / 2); */
-	margin-left: calc(100% / 10);
-/*	background-color: #ddd; */
-	overflow: visible;
-}
-
 div.center { text-align: center; }
-
-.posted_at
-{
-	color: rgb(0%,67%,0%); /* medium bright green */
-	font-size: smaller;
-	margin-left: 3em;
-}
-
-section .listing
-{
-/*	height: 400px; */
-	width:  100%;
-}
-
-.listing_row
-{
-	display: flex;
-	flex: 1;
-/*	flex-flow: row wrap; */
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	overflow: visible;
-	width: 100%;
-}
-
-.description
-{
-	min-width: 250px;
-	width: 400px;
-}
-
-.description,.audioclips,.video
-{
-	padding: 1em;
-}
-
-div.footer
-{
-	font-size: 70%;
-	margin-bottom: 5px;
-}
-
-/* ****************** Span styles ******************** */
-
-span.aboutme
-{
-	display: flex;
-	flex: 1;
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	overflow: visible;
-	width: 90%;
-}
-
-/* error message from SSI failure */
-
-span.errormsg
-{
-	color: red;
-	font-style: italic;
-}
-
-span.mvrt
-{
-	padding-left: 1em;
-}
-
-/* ************************** Forms ******************** */
-
-span.required
-{
-	font-size: larger;
-	color: teal;
-	position: relative;
-	top: 0.3em;
-}
-
-/* Send button on contact form */
-
-input.sendbutton
-{
-	background-image: url("./images/ybtile.gif");
-	font-size: 100%;
-	border-style: solid;
-	border-color: teal;
-	border-width: 1px;
-	padding: 3px;
-}
-
-div.validate
-{
-	margin-top: -15px;
-	margin-right: 6px;
-	text-align: left;
-}
 
 input, textarea
 {
